--- a/mailing/templates/mailing/mailingtext_list.html
+++ b/mailing/templates/mailing/mailingtext_list.html
@@ -1,7 +1,7 @@
 {% extends 'mailing/base.html' %}
 {% block content %}
 <div class="pricing-header px-3 py-3 pt-md-1 pb-md-2 mx-auto text-center">
-    <h1 class="display-4">Посты для рассылок
+    <h1 class="display-4">Сообщения для рассылок
         <div class="float-end">
             <a type="button" class="btn btn-lg btn-block btn-outline-success"
                href="{% url 'mailing:mailingtext_form' %}">
