--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -11,28 +11,22 @@
 </head>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <nav class="ms-5">
-        {% if user.is_superuser %}
+        {% if user.is_superuser or perms.mailing.change_mailing %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:home' %}">Домашняя страница</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Клиенты</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Настройка рассылок</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Рассылки</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Посты для рассылок</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog_list' %}">Блог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:user_list' %}">Пользователи</a>
 
-        {% elif perms.mailing.change_mailing %}
-
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:home' %}">Домашняя страница</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Клиенты</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Настройка рассылок</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Посты для рассылок</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog_list' %}">Блог</a>
-
         {% else %}
 
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:home' %}">Домашняя страница</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Клиенты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Рассылки</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Сообщения для рассылок</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Посты для рассылок</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog_list' %}">Блог</a>
+
         {% endif %}
     </nav>
     {% if user.is_authenticated %}
