reset password fixes

--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -20,7 +20,7 @@
                                 <a class="btn btn-primary btn-sm" href="{% url 'mailing:home' %}">
                                     Отменить
                                 </a>
-                                <a href="{% url 'users:passwort_reset' %}" class="btn btn-link btn-sm">
+                                <a href="{% url 'users:password_reset' %}" class="btn btn-link btn-sm">
                                     Восстановить пароль
                                 </a>
                             </div>
