--- a/users/templates/users/password_reset.html
+++ b/users/templates/users/password_reset.html
@@ -5,14 +5,13 @@
 </div>
 <main>
     <div class="album py-5 bg-body-tertiary">
-        <form method="post" enctype="multipart/form-data">
+        <form method="post">
             {% csrf_token %}
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-md-3">
                         <div class="card shadow-md">
                             <div class="card-body">
-                                {% csrf_token %}
                                 {{ form.as_p }}
                                 <div class="card-footer text-center">
                                     <button type="submit" class="btn btn-success btn-sm">
