--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -11,7 +11,7 @@
 </head>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
     <nav class="ms-5">
-        {% if user.is_superuser or perms.mailing.change_mailing %}
+        {% if user.is_superuser or perms.mailing.can_view_mailing %}
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:home' %}">Домашняя страница</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Клиенты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Рассылки</a>
