--- a/mailing/templates/mailing/base.html
+++ b/mailing/templates/mailing/base.html
@@ -15,7 +15,7 @@
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:home' %}">Домашняя страница</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:client_list' %}">Клиенты</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailing_list' %}">Рассылки</a>
-        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Посты для рассылок</a>
+        <a class="p-2 btn btn-outline-primary" href="{% url 'mailing:mailingtext_list' %}">Сообщения для рассылок</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'blog:blog_list' %}">Блог</a>
         <a class="p-2 btn btn-outline-primary" href="{% url 'users:user_list' %}">Пользователи</a>
 
