--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -17,8 +17,9 @@
             <div class="row row-cols-1 row-cols-md-2 g-3">
                 <div class="col">
                     <div class="card shadow">
-                        <img class="card-img-top img-thumbnail w-100" src="{{ object.image|media_path }}"
-                             alt="Картинок не завезли">
+                        <img class="card-img-top img-thumbnail w-100"
+                             src="{{ object.image|media_path }}"
+                             alt='Картинки нет('>
                     </div>
                 </div>
                 <div class="col">
